# AnimePrayer

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  error_run.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  Settings.tsx
